[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baseball-field-viz"
version = "0.2.4"
description = "Matplotlib baseball field drawing and Statcast spray chart for MLB analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "yasunorim" },
]
keywords = ["baseball", "statcast", "pybaseball", "matplotlib", "spraychart", "mlb", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yasumorishima/baseball-field-viz"
Repository = "https://github.com/yasumorishima/baseball-field-viz"

[tool.hatch.build.targets.wheel]
packages = ["src/baseball_field_viz"]
